tests/fixtures/negative/bad_named_pipeline_missing_eq.nfl
# `=` missing between the type expression and the source identifier.
# Parser-level rejection.

model M [batch=2]:
    x: Tensor[batch, 4]

    y: Tensor[batch, 4] x -> relu
